website/versioned_docs/version-1.6.x/acknowledgements/index.md
---
title: Open Source Acknowledgements
sidebar_label: Acknowledgements
sidebar_position: 100
description: 'Spice AI acknowledges the following open source projects for making this project possible:'
pagination_prev: null
pagination_next: null
tags:
  - acknowledgements
  - open-source
  - dependencies
---

Spice AI acknowledges the following open source projects for making this project possible:

## Go Modules

github.com/AzureAD/microsoft-authentication-library-for-go/apps, https://github.com/AzureAD/microsoft-authentication-library-for-go/blob/v1.4.1/LICENSE, MIT

github.com/chzyer/readline, https://github.com/chzyer/readline/blob/2972be24d48e/LICENSE, MIT

github.com/fsnotify/fsnotify, https://github.com/fsnotify/fsnotify/blob/v1.7.0/LICENSE, BSD-3-Clause

github.com/gocarina/gocsv, https://github.com/gocarina/gocsv/blob/b87c2d0e983a/LICENSE, MIT

github.com/golang-jwt/jwt/v5, https://github.com/golang-jwt/jwt/blob/v5.2.2/LICENSE, MIT

github.com/google/uuid, https://github.com/google/uuid/blob/v1.6.0/LICENSE, BSD-3-Clause

github.com/hashicorp/go-cleanhttp, https://github.com/hashicorp/go-cleanhttp/blob/v0.5.2/LICENSE, MPL-2.0

github.com/hashicorp/go-retryablehttp, https://github.com/hashicorp/go-retryablehttp/blob/v0.7.8/LICENSE, MPL-2.0

github.com/hashicorp/hcl, https://github.com/hashicorp/hcl/blob/v1.0.0/LICENSE, MPL-2.0

github.com/joho/godotenv, https://github.com/joho/godotenv/blob/v1.5.1/LICENCE, MIT

github.com/kylelemons/godebug, https://github.com/kylelemons/godebug/blob/v1.1.0/LICENSE, Apache-2.0

github.com/logrusorgru/aurora, https://github.com/logrusorgru/aurora/blob/v2.0.3/LICENSE, Unlicense

github.com/magiconair/properties, https://github.com/magiconair/properties/blob/v1.8.7/LICENSE.md, BSD-2-Clause

github.com/manifoldco/promptui, https://github.com/manifoldco/promptui/blob/v0.9.0/LICENSE.md, BSD-3-Clause

github.com/mattn/go-runewidth, https://github.com/mattn/go-runewidth/blob/v0.0.15/LICENSE, MIT

github.com/mitchellh/mapstructure, https://github.com/mitchellh/mapstructure/blob/v1.5.0/LICENSE, MIT

github.com/olekukonko/tablewriter, https://github.com/olekukonko/tablewriter/blob/v0.0.5/LICENSE.md, MIT

github.com/pelletier/go-toml/v2, https://github.com/pelletier/go-toml/blob/v2.2.2/LICENSE, MIT

github.com/peterh/liner, https://github.com/peterh/liner/blob/v1.2.2/COPYING, MIT

github.com/pkg/browser, https://github.com/pkg/browser/blob/5ac0b6a4141c/LICENSE, BSD-2-Clause

github.com/rivo/uniseg, https://github.com/rivo/uniseg/blob/v0.4.6/LICENSE.txt, MIT

github.com/sagikazarmark/slog-shim, https://github.com/sagikazarmark/slog-shim/blob/v0.1.0/LICENSE, BSD-3-Clause

github.com/spf13/afero, https://github.com/spf13/afero/blob/v1.11.0/LICENSE.txt, Apache-2.0

github.com/spf13/cast, https://github.com/spf13/cast/blob/v1.6.0/LICENSE, MIT

github.com/spf13/cobra, https://github.com/spf13/cobra/blob/v1.9.1/LICENSE.txt, Apache-2.0

github.com/spf13/pflag, https://github.com/spf13/pflag/blob/v1.0.6/LICENSE, BSD-3-Clause

github.com/spf13/viper, https://github.com/spf13/viper/blob/v1.19.0/LICENSE, MIT

github.com/subosito/gotenv, https://github.com/subosito/gotenv/blob/v1.6.0/LICENSE, MIT

golang.org/x/mod/semver, https://cs.opensource.google/go/x/mod/+/v0.26.0:LICENSE, BSD-3-Clause

golang.org/x/sys/unix, https://cs.opensource.google/go/x/sys/+/v0.34.0:LICENSE, BSD-3-Clause

golang.org/x/text, https://cs.opensource.google/go/x/text/+/v0.26.0:LICENSE, BSD-3-Clause

gopkg.in/ini.v1, https://github.com/go-ini/ini/blob/v1.67.0/LICENSE, Apache-2.0

gopkg.in/yaml.v3, https://github.com/go-yaml/yaml/blob/v3.0.1/LICENSE, MIT

## Rust Crates

- ahash 0.7.8, Apache-2.0 OR MIT 
  <br/>https://github.com/tkaitchuck/ahash

- ahash 0.8.12, Apache-2.0 OR MIT 
  <br/>https://github.com/tkaitchuck/ahash

- ansi_term 0.12.1, MIT 
  <br/>https://github.com/ogham/rust-ansi-term

- anyhow 1.0.98, Apache-2.0 OR MIT 
  <br/>https://github.com/dtolnay/anyhow

- arrow 55.1.0, Apache-2.0 
  <br/>https://github.com/apache/arrow-rs

- arrow-buffer 55.1.0, Apache-2.0 
  <br/>https://github.com/apache/arrow-rs

- arrow-cast 55.1.0, Apache-2.0 
  <br/>https://github.com/apache/arrow-rs

- arrow-csv 55.1.0, Apache-2.0 
  <br/>https://github.com/apache/arrow-rs

- arrow-flight 55.1.0, Apache-2.0 
  <br/>https://github.com/apache/arrow-rs

- arrow-ipc 55.1.0, Apache-2.0 
  <br/>https://github.com/apache/arrow-rs

- arrow-json 55.1.0, Apache-2.0 
  <br/>https://github.com/apache/arrow-rs

- arrow-odbc 16.0.2, MIT 
  <br/>https://github.com/pacman82/arrow-odbc

- arrow-schema 55.1.0, Apache-2.0 
  <br/>https://github.com/apache/arrow-rs

- async-graphql 7.0.17, Apache-2.0 OR MIT 
  <br/>https://github.com/async-graphql/async-graphql

- async-graphql-axum 7.0.17, Apache-2.0 OR MIT 
  <br/>https://github.com/async-graphql/async-graphql

- async-openai 0.28.0, MIT 
  <br/>https://github.com/64bit/async-openai

- async-stream 0.3.6, MIT 
  <br/>https://github.com/tokio-rs/async-stream

- async-trait 0.1.88, Apache-2.0 OR MIT 
  <br/>https://github.com/dtolnay/async-trait

- aws-config 1.6.3, Apache-2.0 
  <br/>https://github.com/smithy-lang/smithy-rs

- aws-credential-types 1.2.4, Apache-2.0 
  <br/>https://github.com/smithy-lang/smithy-rs

- aws-sdk-bedrockruntime 1.92.0, Apache-2.0 
  <br/>https://github.com/awslabs/aws-sdk-rust

- aws-sdk-dynamodb 1.77.0, Apache-2.0 
  <br/>https://github.com/awslabs/aws-sdk-rust

- aws-sdk-glue 1.90.0, Apache-2.0 
  <br/>https://github.com/awslabs/aws-sdk-rust

- aws-sdk-s3vectors 1.1.0, Apache-2.0 
  <br/>https://github.com/awslabs/aws-sdk-rust

- aws-sdk-secretsmanager 1.76.0, Apache-2.0 
  <br/>https://github.com/awslabs/aws-sdk-rust

- aws-sdk-sts 1.71.0, Apache-2.0 
  <br/>https://github.com/awslabs/aws-sdk-rust

- aws-smithy-types 1.3.2, Apache-2.0 
  <br/>https://github.com/smithy-lang/smithy-rs

- axum 0.7.9, MIT 
  <br/>https://github.com/tokio-rs/axum

- axum 0.8.4, MIT 
  <br/>https://github.com/tokio-rs/axum

- axum-extra 0.10.1, MIT 
  <br/>https://github.com/tokio-rs/axum

- azure_core 0.21.0, MIT 
  <br/>https://github.com/azure/azure-sdk-for-rust

- azure_core 0.26.0, MIT 
  <br/>https://github.com/azure/azure-sdk-for-rust

- azure_storage 0.21.0, MIT 
  <br/>https://github.com/azure/azure-sdk-for-rust

- azure_storage_blobs 0.21.0, MIT 
  <br/>https://github.com/azure/azure-sdk-for-rust

- backoff 0.4.0, Apache-2.0 OR MIT 
  <br/>https://github.com/ihrwein/backoff

- base64 0.13.1, Apache-2.0 OR MIT 
  <br/>https://github.com/marshallpierce/rust-base64

- base64 0.21.7, Apache-2.0 OR MIT 
  <br/>https://github.com/marshallpierce/rust-base64

- base64 0.22.1, Apache-2.0 OR MIT 
  <br/>https://github.com/marshallpierce/rust-base64

- bb8 0.8.6, MIT 
  <br/>https://github.com/djc/bb8

- bb8 0.9.0, MIT 
  <br/>https://github.com/djc/bb8

- bb8-oracle 0.3.0, Apache-2.0 OR MIT 
  <br/>https://github.com/RavuAlHemio/bb8-oracle

- bigdecimal 0.4.8, Apache-2.0 OR MIT 
  <br/>https://github.com/akubera/bigdecimal-rs

- bollard 0.18.1, Apache-2.0 
  <br/>https://github.com/fussybeaver/bollard

- byte-unit 5.1.6, MIT 
  <br/>https://github.com/magiclen/byte-unit

- bytes 1.10.1, MIT 
  <br/>https://github.com/tokio-rs/bytes

- charset 0.1.5, Apache-2.0 OR MIT 
  <br/>https://github.com/hsivonen/charset

- chrono 0.4.41, Apache-2.0 OR MIT 
  <br/>https://github.com/chronotope/chrono

- chrono-tz 0.8.6, Apache-2.0 OR MIT 
  <br/>https://github.com/chronotope/chrono-tz

- chrono-tz 0.9.0, Apache-2.0 OR MIT 
  <br/>https://github.com/chronotope/chrono-tz

- chrono-tz 0.10.3, Apache-2.0 OR MIT 
  <br/>https://github.com/chronotope/chrono-tz

- clap 4.5.41, Apache-2.0 OR MIT 
  <br/>https://github.com/clap-rs/clap

- clickhouse-rs 1.1.0-alpha.1, MIT 
  <br/>https://github.com/suharev7/clickhouse-rs

- croner 2.2.0, MIT 
  <br/>https://github.com/hexagon/croner-rust

- csv 1.3.1, MIT OR Unlicense 
  <br/>https://github.com/BurntSushi/rust-csv

- ctrlc 3.4.7, Apache-2.0 OR MIT 
  <br/>https://github.com/Detegr/rust-ctrlc.git

- cudarc 0.12.2, Apache-2.0 OR MIT 
  <br/>https://github.com/coreylowman/cudarc

- cudarc 0.13.9, Apache-2.0 OR MIT 
  <br/>https://github.com/coreylowman/cudarc

- dashmap 6.1.0, MIT 
  <br/>https://github.com/xacrimon/dashmap

- datafusion 47.0.0, Apache-2.0 
  <br/>https://github.com/apache/datafusion

- datafusion-datasource 47.0.0, Apache-2.0 
  <br/>https://github.com/apache/datafusion

- datafusion-federation 0.4.2, Apache-2.0 
  <br/>https://github.com/datafusion-contrib/datafusion-federation

- datafusion-functions-json 0.47.0, Apache-2.0 
  <br/>https://github.com/datafusion-contrib/datafusion-functions-json/

- datafusion-table-providers 0.1.0,  
  <br/>https://github.com/datafusion-contrib/datafusion-table-providers

- delta_kernel 0.12.1, Apache-2.0 
  <br/>https://github.com/delta-io/delta-kernel-rs

- dirs 5.0.1, Apache-2.0 OR MIT 
  <br/>https://github.com/soc/dirs-rs

- dirs 6.0.0, Apache-2.0 OR MIT 
  <br/>https://github.com/soc/dirs-rs

- docx-rs 0.4.17, MIT 
  <br/>https://github.com/bokuweb/docx-rs

- dotenvy 0.15.7, MIT 
  <br/>https://github.com/allan2/dotenvy

- duckdb 1.3.2, MIT 
  <br/>https://github.com/duckdb/duckdb-rs

- dyn-clone 1.0.19, Apache-2.0 OR MIT 
  <br/>https://github.com/dtolnay/dyn-clone

- either 1.15.0, Apache-2.0 OR MIT 
  <br/>https://github.com/rayon-rs/either

- env_logger 0.11.8, Apache-2.0 OR MIT 
  <br/>https://github.com/rust-cli/env_logger

- evalconverter 0.1.0, Apache-2.0 
  <br/>

- fundu 2.0.1, MIT 
  <br/>https://github.com/fundu-rs/fundu

- futures 0.3.31, Apache-2.0 OR MIT 
  <br/>https://github.com/rust-lang/futures-rs

- futures-util 0.3.31, Apache-2.0 OR MIT 
  <br/>https://github.com/rust-lang/futures-rs

- globset 0.4.16, MIT OR Unlicense 
  <br/>https://github.com/BurntSushi/ripgrep/tree/master/crates/globset

- governor 0.10.0, MIT 
  <br/>https://github.com/boinkor-net/governor.git

- graph-rs-sdk 2.0.1, MIT 
  <br/>https://github.com/sreeise/graph-rs-sdk

- graphql-parser 0.4.1, Apache-2.0 OR MIT 
  <br/>

- headers-accept 0.1.4, MIT 
  <br/>https://github.com/maxcountryman/headers-accept

- hf-hub 0.4.2, Apache-2.0 
  <br/>https://github.com/huggingface/hf-hub

- hostname 0.3.1, MIT 
  <br/>https://github.com/svartalf/hostname

- hostname 0.4.1, MIT 
  <br/>https://github.com/svartalf/hostname

- http 0.2.12, Apache-2.0 OR MIT 
  <br/>https://github.com/hyperium/http

- http 1.3.1, Apache-2.0 OR MIT 
  <br/>https://github.com/hyperium/http

- http-body-util 0.1.3, MIT 
  <br/>https://github.com/hyperium/http-body

- humantime 2.2.0, Apache-2.0 OR MIT 
  <br/>https://github.com/chronotope/humantime

- hyper 0.14.32, MIT 
  <br/>https://github.com/hyperium/hyper

- hyper 1.6.0, MIT 
  <br/>https://github.com/hyperium/hyper

- hyper-util 0.1.15, MIT 
  <br/>https://github.com/hyperium/hyper-util

- iceberg 0.5.1, Apache-2.0 
  <br/>https://github.com/apache/iceberg-rust

- iceberg-catalog-glue 0.5.1, Apache-2.0 
  <br/>https://github.com/apache/iceberg-rust

- iceberg-catalog-rest 0.5.1, Apache-2.0 
  <br/>https://github.com/apache/iceberg-rust

- iceberg-datafusion 0.5.1, Apache-2.0 
  <br/>https://github.com/apache/iceberg-rust

- imap 3.0.0-alpha.14, Apache-2.0 OR MIT 
  <br/>https://github.com/jonhoo/rust-imap

- indexmap 1.9.3, Apache-2.0 OR MIT 
  <br/>https://github.com/bluss/indexmap

- indexmap 2.10.0, Apache-2.0 OR MIT 
  <br/>https://github.com/indexmap-rs/indexmap

- indicatif 0.17.11, MIT 
  <br/>https://github.com/console-rs/indicatif

- insta 1.43.1, Apache-2.0 
  <br/>https://github.com/mitsuhiko/insta

- itertools 0.10.5, Apache-2.0 OR MIT 
  <br/>https://github.com/rust-itertools/itertools

- itertools 0.12.1, Apache-2.0 OR MIT 
  <br/>https://github.com/rust-itertools/itertools

- itertools 0.13.0, Apache-2.0 OR MIT 
  <br/>https://github.com/rust-itertools/itertools

- itertools 0.14.0, Apache-2.0 OR MIT 
  <br/>https://github.com/rust-itertools/itertools

- jsonpath-rust 0.7.5, MIT 
  <br/>https://github.com/besok/jsonpath-rust

- jsonwebtoken 9.3.1, MIT 
  <br/>https://github.com/Keats/jsonwebtoken

- keyring 3.6.2, Apache-2.0 OR MIT 
  <br/>https://github.com/hwchen/keyring-rs.git

- log 0.4.27, Apache-2.0 OR MIT 
  <br/>https://github.com/rust-lang/log

- logos 0.15.0, Apache-2.0 OR MIT 
  <br/>https://github.com/maciejhirsz/logos

- mailparse 0.15.0, 0BSD 
  <br/>https://github.com/staktrace/mailparse

- mediatype 0.19.20, MIT 
  <br/>https://github.com/picoHz/mediatype

- mimalloc 0.1.47, MIT 
  <br/>https://github.com/purpleprotocol/mimalloc_rust

- mistralrs 0.6.0, MIT 
  <br/>https://github.com/EricLBuehler/mistral.rs

- mistralrs-core 0.6.0, MIT 
  <br/>https://github.com/EricLBuehler/mistral.rs

- moka 0.12.10, Apache-2.0 OR MIT 
  <br/>https://github.com/moka-rs/moka

- mysql_async 0.35.1, Apache-2.0 OR MIT 
  <br/>https://github.com/blackbeam/mysql_async

- ndarray 0.15.6, Apache-2.0 OR MIT 
  <br/>https://github.com/rust-ndarray/ndarray

- ndarray 0.16.1, Apache-2.0 OR MIT 
  <br/>https://github.com/rust-ndarray/ndarray

- nix 0.30.1, MIT 
  <br/>https://github.com/nix-rust/nix

- notify 8.0.0, CC0-1.0 
  <br/>https://github.com/notify-rs/notify.git

- object_store 0.12.3, Apache-2.0 OR MIT 
  <br/>https://github.com/apache/arrow-rs-object-store

- octocrab 0.44.1, Apache-2.0 OR MIT 
  <br/>https://github.com/XAMPPRocky/octocrab.git

- odbc-api 13.0.1, MIT 
  <br/>https://github.com/pacman82/odbc-api

- once_cell 1.21.3, Apache-2.0 OR MIT 
  <br/>https://github.com/matklad/once_cell

- opentelemetry 0.27.1, Apache-2.0 
  <br/>https://github.com/open-telemetry/opentelemetry-rust

- opentelemetry 0.29.1, Apache-2.0 
  <br/>https://github.com/open-telemetry/opentelemetry-rust/tree/main/opentelemetry

- opentelemetry-http 0.27.0, Apache-2.0 
  <br/>https://github.com/open-telemetry/opentelemetry-rust

- opentelemetry-prometheus 0.27.0, Apache-2.0 
  <br/>https://github.com/open-telemetry/opentelemetry-rust

- opentelemetry-proto 0.29.0, Apache-2.0 
  <br/>https://github.com/open-telemetry/opentelemetry-rust/tree/main/opentelemetry-proto

- opentelemetry-zipkin 0.27.0, Apache-2.0 
  <br/>https://github.com/open-telemetry/opentelemetry-rust/tree/main/opentelemetry-zipkin

- opentelemetry_sdk 0.27.1, Apache-2.0 
  <br/>https://github.com/open-telemetry/opentelemetry-rust

- opentelemetry_sdk 0.29.0, Apache-2.0 
  <br/>https://github.com/open-telemetry/opentelemetry-rust/tree/main/opentelemetry-sdk

- oracle 0.6.3, Apache-2.0 OR UPL-1.0 
  <br/>https://github.com/kubo/rust-oracle

- parking_lot 0.11.2, Apache-2.0 OR MIT 
  <br/>https://github.com/Amanieu/parking_lot

- parking_lot 0.12.4, Apache-2.0 OR MIT 
  <br/>https://github.com/Amanieu/parking_lot

- parquet 55.1.0, Apache-2.0 
  <br/>https://github.com/apache/arrow-rs

- paste 1.0.15, Apache-2.0 OR MIT 
  <br/>https://github.com/dtolnay/paste

- path-clean 1.0.1, Apache-2.0 OR MIT 
  <br/>https://github.com/danreeves/path-clean

- pdf-extract 0.8.0, MIT 
  <br/>https://github.com/jrmuizel/pdf-extract

- percent-encoding 2.3.1, Apache-2.0 OR MIT 
  <br/>https://github.com/servo/rust-url/

- pin-project 1.1.10, Apache-2.0 OR MIT 
  <br/>https://github.com/taiki-e/pin-project

- pkcs8 0.10.2, Apache-2.0 OR MIT 
  <br/>https://github.com/RustCrypto/formats/tree/master/pkcs8

- postcard 1.1.2, Apache-2.0 OR MIT 
  <br/>https://github.com/jamesmunns/postcard

- prometheus 0.13.4, Apache-2.0 
  <br/>https://github.com/tikv/rust-prometheus

- prometheus-parse 0.2.5, Apache-2.0 
  <br/>https://github.com/ccakes/prometheus-parse-rs

- prost 0.11.9, Apache-2.0 
  <br/>https://github.com/tokio-rs/prost

- prost 0.12.6, Apache-2.0 
  <br/>https://github.com/tokio-rs/prost

- prost 0.13.5, Apache-2.0 
  <br/>https://github.com/tokio-rs/prost

- pulldown-cmark 0.12.2, MIT 
  <br/>https://github.com/raphlinus/pulldown-cmark

- pulldown-cmark 0.13.0, MIT 
  <br/>https://github.com/raphlinus/pulldown-cmark

- rand 0.7.3, Apache-2.0 OR MIT 
  <br/>https://github.com/rust-random/rand

- rand 0.8.5, Apache-2.0 OR MIT 
  <br/>https://github.com/rust-random/rand

- rand 0.9.1, Apache-2.0 OR MIT 
  <br/>https://github.com/rust-random/rand

- rdkafka 0.38.0, MIT 
  <br/>https://github.com/fede1024/rust-rdkafka

- regex 1.11.1, Apache-2.0 OR MIT 
  <br/>https://github.com/rust-lang/regex

- reqwest 0.12.22, Apache-2.0 OR MIT 
  <br/>https://github.com/seanmonstar/reqwest

- reqwest-eventsource 0.6.0, Apache-2.0 OR MIT 
  <br/>https://github.com/jpopesculian/reqwest-eventsource

- rmcp 0.1.5, Apache-2.0 OR MIT 
  <br/>https://github.com/modelcontextprotocol/rust-sdk/

- rstest 0.25.0, Apache-2.0 OR MIT 
  <br/>https://github.com/la10736/rstest

- rusqlite 0.31.0, MIT 
  <br/>https://github.com/rusqlite/rusqlite

- rustls 0.21.12, Apache-2.0 OR ISC OR MIT 
  <br/>https://github.com/rustls/rustls

- rustls 0.23.27, Apache-2.0 OR ISC OR MIT 
  <br/>https://github.com/rustls/rustls

- rustls-native-certs 0.6.3, Apache-2.0 OR ISC OR MIT 
  <br/>https://github.com/ctz/rustls-native-certs

- rustls-native-certs 0.8.1, Apache-2.0 OR ISC OR MIT 
  <br/>https://github.com/rustls/rustls-native-certs

- rustls-pemfile 1.0.4, Apache-2.0 OR ISC OR MIT 
  <br/>https://github.com/rustls/pemfile

- rustls-pemfile 2.2.0, Apache-2.0 OR ISC OR MIT 
  <br/>https://github.com/rustls/pemfile

- rustyline 16.0.0, MIT 
  <br/>https://github.com/kkawakam/rustyline

- schemars 0.8.22, MIT 
  <br/>https://github.com/GREsau/schemars

- schemars 0.9.0, MIT 
  <br/>https://github.com/GREsau/schemars

- scopeguard 1.2.0, Apache-2.0 OR MIT 
  <br/>https://github.com/bluss/scopeguard

- secrecy 0.10.3, Apache-2.0 OR MIT 
  <br/>https://github.com/iqlusioninc/crates/tree/main/secrecy

- serde 1.0.219, Apache-2.0 OR MIT 
  <br/>https://github.com/serde-rs/serde

- serde-value 0.7.0, MIT 
  <br/>https://github.com/arcnmx/serde-value

- serde_json 1.0.140, Apache-2.0 OR MIT 
  <br/>https://github.com/serde-rs/json

- serde_qs 0.8.5, Apache-2.0 OR MIT 
  <br/>https://github.com/samscott89/serde_qs

- serde_qs 1.0.0-rc.3, Apache-2.0 OR MIT 
  <br/>https://github.com/samscott89/serde_qs

- serde_yaml 0.9.34+deprecated, Apache-2.0 OR MIT 
  <br/>https://github.com/dtolnay/serde-yaml

- sha2 0.10.9, Apache-2.0 OR MIT 
  <br/>https://github.com/RustCrypto/hashes

- snafu 0.8.6, Apache-2.0 OR MIT 
  <br/>https://github.com/shepmaster/snafu

- snmalloc-rs 0.3.8, MIT 
  <br/>https://github.com/SchrodingerZhu/snmalloc-rs

- snowflake-api 0.9.0, Apache-2.0 
  <br/>https://github.com/mycelial/snowflake-rs

- spark-connect-rs 0.0.1-beta.4, Apache-2.0 
  <br/>https://github.com/sjrusso8/spark-connect-rs

- spiceai 2.0.0, Apache-2.0 
  <br/>

- ssh2 0.9.5, Apache-2.0 OR MIT 
  <br/>https://github.com/alexcrichton/ssh2-rs

- strsim 0.10.0, MIT 
  <br/>https://github.com/dguo/strsim-rs

- strsim 0.11.1, MIT 
  <br/>https://github.com/rapidfuzz/strsim-rs

- suppaftp 5.4.0, Apache-2.0 
  <br/>https://github.com/veeso/suppaftp

- sysinfo 0.30.13, MIT 
  <br/>https://github.com/GuillaumeGomez/sysinfo

- sysinfo 0.33.1, MIT 
  <br/>https://github.com/GuillaumeGomez/sysinfo

- tantivy 0.24.1, MIT 
  <br/>https://github.com/quickwit-oss/tantivy

- tempfile 3.20.0, Apache-2.0 OR MIT 
  <br/>https://github.com/Stebalien/tempfile

- tera 1.20.0, MIT 
  <br/>https://github.com/Keats/tera

- text-embeddings-backend 1.7.3,  
  <br/>

- text-embeddings-backend-candle 1.7.3,  
  <br/>

- text-embeddings-backend-core 1.7.3,  
  <br/>

- text-embeddings-core 1.7.3,  
  <br/>

- text-splitter 0.18.1, MIT 
  <br/>https://github.com/benbrandt/text-splitter

- tiberius 0.12.3, Apache-2.0 OR MIT 
  <br/>https://github.com/prisma/tiberius

- tiktoken-rs 0.6.0, MIT 
  <br/>https://github.com/zurawiki/tiktoken-rs

- tikv-jemallocator 0.6.0, Apache-2.0 OR MIT 
  <br/>https://github.com/tikv/jemallocator

- tokenizers 0.21.2, Apache-2.0 
  <br/>https://github.com/huggingface/tokenizers

- tokio 1.45.1, MIT 
  <br/>https://github.com/tokio-rs/tokio

- tokio-postgres 0.7.13, Apache-2.0 OR MIT 
  <br/>https://github.com/sfackler/rust-postgres

- tokio-rusqlite 0.5.1, MIT 
  <br/>https://github.com/programatik29/tokio-rusqlite

- tokio-rustls 0.24.1, Apache-2.0 OR MIT 
  <br/>https://github.com/rustls/tokio-rustls

- tokio-rustls 0.26.2, Apache-2.0 OR MIT 
  <br/>https://github.com/rustls/tokio-rustls

- tokio-stream 0.1.17, MIT 
  <br/>https://github.com/tokio-rs/tokio

- tokio-util 0.7.15, MIT 
  <br/>https://github.com/tokio-rs/tokio

- tonic 0.12.3, MIT 
  <br/>https://github.com/hyperium/tonic

- tonic-health 0.12.3, MIT 
  <br/>https://github.com/hyperium/tonic

- tower 0.4.13, MIT 
  <br/>https://github.com/tower-rs/tower

- tower 0.5.2, MIT 
  <br/>https://github.com/tower-rs/tower

- tower-http 0.6.6, MIT 
  <br/>https://github.com/tower-rs/tower-http

- tracing 0.1.41, MIT 
  <br/>https://github.com/tokio-rs/tracing

- tracing-futures 0.2.5, MIT 
  <br/>https://github.com/tokio-rs/tracing

- tracing-opentelemetry 0.28.0, MIT 
  <br/>https://github.com/tokio-rs/tracing-opentelemetry

- tracing-subscriber 0.3.19, MIT 
  <br/>https://github.com/tokio-rs/tracing

- tract-core 0.21.10, Apache-2.0 OR MIT 
  <br/>https://github.com/snipsco/tract

- tract-onnx 0.21.10, Apache-2.0 OR MIT 
  <br/>https://github.com/snipsco/tract

- trust-dns-resolver 0.23.2, Apache-2.0 OR MIT 
  <br/>https://github.com/bluejekyll/trust-dns

- url 2.5.4, Apache-2.0 OR MIT 
  <br/>https://github.com/servo/rust-url

- utoipa 5.4.0, Apache-2.0 OR MIT 
  <br/>https://github.com/juhaku/utoipa

- utoipa-swagger-ui 9.0.2, Apache-2.0 OR MIT 
  <br/>https://github.com/juhaku/utoipa

- uuid 0.8.2, Apache-2.0 OR MIT 
  <br/>https://github.com/uuid-rs/uuid

- uuid 1.17.0, Apache-2.0 OR MIT 
  <br/>https://github.com/uuid-rs/uuid

- winver 1.0.0, MIT 
  <br/>https://github.com/rhysd/winver

- x509-certificate 0.23.1, MPL-2.0 
  <br/>https://github.com/indygreg/cryptography-rs.git

- zip 0.6.6, MIT 
  <br/>https://github.com/zip-rs/zip.git

- zip 1.1.4, MIT 
  <br/>https://github.com/zip-rs/zip2.git

- zip 3.0.0, MIT 
  <br/>https://github.com/zip-rs/zip2.git
